# haskell-x-swift-project-steps

./: README.md
.github/: FUNDING.yml
HsFFIMacro/: Package.swift
HsFFIMacro/Sources/HsFFIMacro/: HsFFIMacro.swift
HsFFIMacro/Sources/HsFFIMacroClient/: main.swift
HsFFIMacro/Sources/HsFFIMacroMacros/: HsFFIMacroMacro.swift
HsFFIMacro/Tests/HsFFIMacroTests/: HsFFIMacroTests.swift
SwiftHaskell/: .gitignore  BuildSettings.xcconfig  build-haskell.sh  module.modulemap
SwiftHaskell/SwiftHaskell/: ContentView.swift  SwiftHaskellApp.swift
SwiftHaskell/SwiftHaskell.xcodeproj/: project.pbxproj
SwiftHaskell/haskell-framework/: .gitignore  CHANGELOG.md  haskell-framework.cabal
SwiftHaskell/haskell-framework/cbits/: MyForeignLibRts.c  MyForeignLibRts.h
SwiftHaskell/haskell-framework/flib/: MyForeignLib.hs
SwiftHaskell/haskell-framework/scripts/: gen-dynamic-settings.sh  test-haskell-foreign-lib.sh
SwiftHaskell/haskell-framework/src/: MyLib.hs
experiments/: Makefile  Memory.hs  Rect.swift
haskell-framework/: README.md  haskell-framework.cabal
haskell-framework/flib/: MyForeignLib.hs
haskell-framework/scripts/: test-haskell-foreign-lib.sh
haskell-framework/src/: MyLib.hs
