cabal-version:      3.4
name:               haskell-framework
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O -ddump-cmm -ddump-asm -ddump-to-file -dno-typeable-binds

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0, primitive, ghc-prim, derive-storable, aeson, template-haskell, bytestring
    hs-source-dirs:   src
    default-language: GHC2021

foreign-library haskell-foreign-framework
    import:     warnings
    type: native-shared

    -- This should work on Mac, despite being undefined behaviour
    -- See https://www.hobson.space/posts/haskell-foreign-library/ (great read)
    options: standalone

    -- We copy the C stub headers to a folder in the root.
    -- If you have foreign-export declarations in the library
    -- be sure to add this flag there too (so all stubs get added
    -- to the `haskell-framework-include` folder)
    ghc-options: -stubdir=haskell-framework-include

    other-modules: MyForeignLib
    build-depends: base, haskell-framework, primitive, ghc-prim, derive-storable, aeson, bytestring, template-haskell
    hs-source-dirs: flib

    include-dirs: cbits
    c-sources: cbits/MyForeignLibRts.c
    install-includes: MyForeignLibRts.h

